force-app/main/default/objects/Drivers_License__c/Drivers_License__c.object-meta.xml
<CustomObject>
    <label>Drivers License</label>
    <nameField>
        <displayFormat>DL-{00000}</displayFormat>
        <label>Drivers License ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drivers Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>