force-app/main/default/objects/Drivers_License__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>DOB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>