force-app/main/default/objects/Drivers_License__c/fields/Issue_date__c.field-meta.xml
<CustomField>
    <fullName>Issue_date__c</fullName>
    <label>Issue date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>